Correction of Creator prediction 1.0

--- a/predict_overall_score.ipynb
+++ b/predict_overall_score.ipynb
@@ -7145,7 +7145,10 @@
     "## 3 Another encoding?\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   }
  ],
